--- a/TaskerClient/src/addresses/delete.html
+++ b/TaskerClient/src/addresses/delete.html
@@ -1,3 +1,26 @@
 <template>
-  Delete
+
+
+  <h1>Address - Delete</h1>
+
+  <h3>Are you sure you want to delete this?</h3>
+  <div>
+    <h4>Address</h4>
+    <hr/>
+    <dl class="row">
+      <dt class="col-sm-4">
+        AddressValue
+      </dt>
+      <dd class="col-sm-8">
+        ${address.addressValue}
+      </dd>
+    </dl>
+
+    <form method="post" submit.delegate="submit()">
+      <input type="submit" value="Delete" class="btn btn-danger"/> |
+      <a route-href="route: addressesIndex">Back to List</a>
+    </form>
+  </div>
+
+
 </template>
