--- a/TaskerClient/src/addresses/edit.html
+++ b/TaskerClient/src/addresses/edit.html
@@ -1,3 +1,26 @@
 <template>
-  Edit
+
+  <h1>Edit</h1>
+
+  <h4>Address</h4>
+  <hr />
+  <div class="row">
+    <div class="col-md-4">
+      <form method="post" submit.delegate="submit()">
+
+        <div class="form-group">
+          <label class="control-label" for="AddressValue">AddressValue</label>
+          <input class="form-control" type="text" value.bind="address.AddressValue" />
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div>
+    <a route-href="route: addressesIndex">Back to List</a>
+  </div>
+
 </template>
