--- a/TaskerClient/src/cities/index.html
+++ b/TaskerClient/src/cities/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>Cities - Index</h1>
+
+  <p>
+    <a route-href="route: citiesCreate">Cities - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        Cities
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="city of cities">
+      <td>
+        <!-- string interpolation -->
+        ${city.cityValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${city.cityCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: citiesEdit; params.bind: {id: city.id}">Edit</a> |
+        <a route-href="route: citiesDetails; params.bind: {id: city.id}">Details</a> |
+        <a route-href="route: citiesDelete; params.bind: {id: city.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
