--- a/TaskerClient/src/invoices/index.html
+++ b/TaskerClient/src/invoices/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>Invoices - Index</h1>
+
+  <p>
+    <a route-href="route: invoicesCreate">Invoices - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        Invoices
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="invoice of invoices">
+      <td>
+        <!-- string interpolation -->
+        ${invoice.invoiceValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${invoice.invoiceCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: invoicesEdit; params.bind: {id: invoice.id}">Edit</a> |
+        <a route-href="route: invoicesDetails; params.bind: {id: invoice.id}">Details</a> |
+        <a route-href="route: invoicesDelete; params.bind: {id: invoice.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
