--- a/TaskerClient/src/payments/index.html
+++ b/TaskerClient/src/payments/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>Payments - Index</h1>
+
+  <p>
+    <a route-href="route: paymentsCreate">Payments - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        Payments
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="payment of payments">
+      <td>
+        <!-- string interpolation -->
+        ${payment.paymentValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${payment.paymentCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: paymentsEdit; params.bind: {id: payment.id}">Edit</a> |
+        <a route-href="route: paymentsDetails; params.bind: {id: payment.id}">Details</a> |
+        <a route-href="route: paymentsDelete; params.bind: {id: payment.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
