--- a/TaskerClient/src/reviews/index.html
+++ b/TaskerClient/src/reviews/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>Reviews - Index</h1>
+
+  <p>
+    <a route-href="route: reviewsCreate">Reviews - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        Reviews
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="review of reviews">
+      <td>
+        <!-- string interpolation -->
+        ${review.reviewValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${review.reviewCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: reviewsEdit; params.bind: {id: review.id}">Edit</a> |
+        <a route-href="route: reviewsDetails; params.bind: {id: review.id}">Details</a> |
+        <a route-href="route: reviewsDelete; params.bind: {id: review.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
