--- a/TaskerClient/src/tasktypes/index.html
+++ b/TaskerClient/src/tasktypes/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>TaskTypes - Index</h1>
+
+  <p>
+    <a route-href="route: tasktypesCreate">TaskTypes - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        TaskTypes
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="tasktype of tasktypes">
+      <td>
+        <!-- string interpolation -->
+        ${tasktype.tasktypeValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${tasktype.tasktypeCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: tasktypesEdit; params.bind: {id: tasktype.id}">Edit</a> |
+        <a route-href="route: tasktypesDetails; params.bind: {id: tasktype.id}">Details</a> |
+        <a route-href="route: tasktypesDelete; params.bind: {id: tasktype.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
