--- a/TaskerClient/src/useronaddresses/index.html
+++ b/TaskerClient/src/useronaddresses/index.html
@@ -1,3 +1,42 @@
 <template>
-  Index
+
+  <h1>User On Addresses - Index</h1>
+
+  <p>
+    <a route-href="route: userOnAddressesCreate">User On Addresses - Create New</a>
+  </p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>
+        Value
+      </th>
+      <th>
+        User On Addresses
+      </th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <!-- repeat this tr element, iterate over contactTypes -->
+    <tr repeat.for="userOnAddress of userOnAddresses">
+      <td>
+        <!-- string interpolation -->
+        ${userOnAddress.userOnAddressValue}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${userOnAddress.userOnAddressCount}
+      </td>
+      <td>
+        <!-- gdenerate links, based on routing table defined in main-router -->
+        <a route-href="route: userOnAddressesEdit; params.bind: {id: userOnAddress.id}">Edit</a> |
+        <a route-href="route: userOnAddressesDetails; params.bind: {id: userOnAddress.id}">Details</a> |
+        <a route-href="route: userOnAddressesDelete; params.bind: {id: userOnAddress.id}">Delete</a>
+      </td>
+    </tr>
+
+    </tbody>
+  </table>
+
 </template>
