--- a/TaskerClient/src/identifications/delete.html
+++ b/TaskerClient/src/identifications/delete.html
@@ -1,3 +1,24 @@
 <template>
-  Delete
+
+  <h1>Identification - Delete</h1>
+
+  <h3>Are you sure you want to delete this?</h3>
+  <div>
+    <h4>Identification</h4>
+    <hr/>
+    <dl class="row">
+      <dt class="col-sm-4">
+        IdentificationValue
+      </dt>
+      <dd class="col-sm-8">
+        ${identification.identificationValue}
+      </dd>
+    </dl>
+
+    <form method="post" submit.delegate="submit()">
+      <input type="submit" value="Delete" class="btn btn-danger"/> |
+      <a route-href="route: identificationsIndex">Back to List</a>
+    </form>
+  </div>
+
 </template>
