--- a/TaskerClient/src/reviews/create.html
+++ b/TaskerClient/src/reviews/create.html
@@ -1,3 +1,28 @@
 <template>
-  Create
+  <h1>Create</h1>
+
+  <h4>Reviews</h4>
+  <hr/>
+  <div class="row">
+    <div class="col-md-4">
+      <!-- remove "on" from front of on<somethingevent> ad point out method in your aurelia class-->
+      <form method="post" submit.delegate="submit()">
+
+        <div class="form-group">
+          <label class="control-label" for="ReviewValue">ReviewValue</label>
+          <!-- value.bind - bind this value to class variable -->
+          <input class="form-control" type="text"
+                 id="ReviewValue" name="ReviewValue" value.bind="Review.reviewValue"/>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary"/>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div>
+    <a route-href="route: reviewsIndex">Back to List</a>
+  </div>
+
 </template>
