--- a/TaskerClient/src/skills/delete.html
+++ b/TaskerClient/src/skills/delete.html
@@ -1,3 +1,24 @@
 <template>
-  Delete
+
+  <h1>Skills - Delete</h1>
+
+  <h3>Are you sure you want to delete this?</h3>
+  <div>
+    <h4>Skills</h4>
+    <hr/>
+    <dl class="row">
+      <dt class="col-sm-4">
+        SkillValue
+      </dt>
+      <dd class="col-sm-8">
+        ${skill.skillValue}
+      </dd>
+    </dl>
+
+    <form method="post" submit.delegate="submit()">
+      <input type="submit" value="Delete" class="btn btn-danger"/> |
+      <a route-href="route: skillsIndex">Back to List</a>
+    </form>
+  </div>
+
 </template>
