--- a/TaskerClient/src/main-router.html
+++ b/TaskerClient/src/main-router.html
@@ -1,5 +1,10 @@
 <template>
 <require from="bootstrap/dist/css/bootstrap.min.css"></require>
+
+<!--<require from="../../css/admin.css"></require>-->
+<!--<require from="../../css/site.css"></require>-->
+<!--<require from="../../css/style.css"></require>-->
+
   <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       <div class="container">
