--- a/TaskerClient/src/hourlyrates/index.html
+++ b/TaskerClient/src/hourlyrates/index.html
@@ -9,10 +9,10 @@
     <thead>
     <tr>
       <th>
-        Value
+        Hourly Rates
       </th>
       <th>
-        HourlyRates
+        Starting From
       </th>
       <th></th>
     </tr>
@@ -22,11 +22,11 @@
     <tr repeat.for="hourlyRate of hourlyRates">
       <td>
         <!-- string interpolation -->
-        ${hourlyRate.hourlyRateValue}
+        ${hourlyRate.HourRate}
       </td>
       <td>
         <!-- string interpolation -->
-        ${hourlyRate.hourlyRateCount}
+        ${hourlyRate.Start}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
